[package]
name = "leetcode-mt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
std-semaphore = "0.1.0"
crossbeam-utils = "*"
crossbeam-channel = "*"
parking_lot = "*"
conc = { git = "https://github.com/wyhhh/conc.git" }